templates/plane-ce_template.yaml
---
# Source: plane-ce/templates/workloads/api.deployment.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: release-name-api
  labels:
    app.name: default-release-name-api
spec:
  clusterIP: None
  ports:
  - name: api-8000
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app.name: default-release-name-api
---
# Source: plane-ce/templates/workloads/minio.stateful.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: release-name-minio
  labels:
    app.name: default-release-name-minio
spec:
  clusterIP: None
  ports:
  - name: minio-api-9000
    port: 9000
    protocol: TCP
    targetPort: 9000
  - name: minio-console-9090
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app.name: default-release-name-minio
---
# Source: plane-ce/templates/workloads/postgres.stateful.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: release-name-pgdb
  labels:
    app.name: default-release-name-pgdb
spec:
  clusterIP: None
  ports:
  - name: pg-5432
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app.name: default-release-name-pgdb
---
# Source: plane-ce/templates/workloads/redis.stateful.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: release-name-redis
  labels:
    app.name: default-release-name-redis
spec:
  clusterIP: None
  ports:
  - name: redis-6379
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app.name: default-release-name-redis
---
# Source: plane-ce/templates/workloads/space.deployment.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: release-name-space
  labels:
    app.name: default-release-name-space
spec:
  clusterIP: None
  ports:
  - name: space-3000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app.name: default-release-name-space
---
# Source: plane-ce/templates/workloads/web.deployment.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: release-name-web
  labels:
    app.name: default-release-name-web
spec:
  clusterIP: None
  ports:
  - name: web-3000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app.name: default-release-name-web
---
# Source: plane-ce/templates/workloads/api.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: release-name-api-wl
spec:
  replicas: 1
  selector:
    matchLabels:
      app.name: default-release-name-api
  template:
    metadata:
      namespace: default
      labels:
        app.name: default-release-name-api
      annotations:
        timestamp: "2024-05-15 10:08:22.089014 +0200 CEST m=+0.854604842"
    spec:
      containers:
      - name: release-name-api
        imagePullPolicy: Always
        image: makeplane/plane-backend:stable
        stdin: true
        tty: true
        resources:
          requests:
            memory: "50Mi"
            cpu: "50m"
          limits:
            memory: "1000Mi"
            cpu: "500m"
        command:
          - ./bin/takeoff
      serviceAccount: release-name-srv-account
      serviceAccountName: release-name-srv-account
---
# Source: plane-ce/templates/workloads/beat-worker.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: release-name-beat-worker-wl
spec:
  replicas: 1
  selector:
    matchLabels:
      app.name: default-release-name-beat-worker
  template:
    metadata:
      namespace: default
      labels:
        app.name: default-release-name-beat-worker
      annotations:
        timestamp: "2024-05-15 10:08:22.088992 +0200 CEST m=+0.854582868"
    spec:
      containers:
      - name: release-name-beat-worker
        imagePullPolicy: Always
        image: makeplane/plane-backend:stable
        stdin: true
        tty: true
        resources:
          requests:
            memory: "50Mi"
            cpu: "50m"
          limits:
            memory: "1000Mi"
            cpu: "500m"
        command:
          - ./bin/beat
      serviceAccount: release-name-srv-account
      serviceAccountName: release-name-srv-account
---
# Source: plane-ce/templates/workloads/space.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: release-name-space-wl
spec:
  replicas: 1
  selector:
    matchLabels:
      app.name: default-release-name-space
  template:
    metadata:
      namespace: default
      labels:
        app.name: default-release-name-space
      annotations:
        timestamp: "2024-05-15 10:08:22.088869 +0200 CEST m=+0.854460140"
    spec:
      containers:
      - name: release-name-space
        imagePullPolicy: Always
        image: makeplane/plane-space:stable
        stdin: true
        tty: true
        resources:
          requests:
            memory: "50Mi"
            cpu: "50m"
          limits:
            memory: "1000Mi"
            cpu: "500m"
        command:
          - /usr/local/bin/start.sh
        args:
          - space/server.js
          - space
      serviceAccount: release-name-srv-account
      serviceAccountName: release-name-srv-account
---
# Source: plane-ce/templates/workloads/web.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: release-name-web-wl
spec:
  replicas: 1
  selector:
    matchLabels:
      app.name: default-release-name-web
  template:
    metadata:
      namespace: default
      labels:
        app.name: default-release-name-web
      annotations:
        timestamp: "2024-05-15 10:08:22.088847 +0200 CEST m=+0.854438290"
    spec:
      containers:
      - name: release-name-web
        imagePullPolicy: Always
        image: makeplane/plane-frontend:stable
        stdin: true
        tty: true
        resources:
          requests:
            memory: "50Mi"
            cpu: "50m"
          limits:
            memory: "1000Mi"
            cpu: "500m"
        command:
          - /usr/local/bin/start.sh
        args:
          - web/server.js
          - web
      serviceAccount: release-name-srv-account
      serviceAccountName: release-name-srv-account
---
# Source: plane-ce/templates/workloads/worker.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: release-name-worker-wl
spec:
  replicas: 1
  selector:
    matchLabels:
      app.name: default-release-name-worker
  template:
    metadata:
      namespace: default
      labels:
        app.name: default-release-name-worker
      annotations:
        timestamp: "2024-05-15 10:08:22.0888 +0200 CEST m=+0.854390791"
    spec:
      containers:
      - name: release-name-worker
        imagePullPolicy: Always
        image: makeplane/plane-backend:stable
        stdin: true
        tty: true
        resources:
          requests:
            memory: "50Mi"
            cpu: "50m"
          limits:
            memory: "1000Mi"
            cpu: "500m"
        command:
          - ./bin/worker
      serviceAccount: release-name-srv-account
      serviceAccountName: release-name-srv-account
---
# Source: plane-ce/templates/workloads/minio.stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: default
  name: release-name-minio-wl
spec:
  selector:
    matchLabels:
      app.name: default-release-name-minio
  serviceName:  release-name-minio
  template:
    metadata:
      labels:
        app.name: default-release-name-minio
    spec:
      containers:
      - image: minio/minio:latest
        imagePullPolicy: Always
        name: release-name-minio
        stdin: true
        tty: true
        # command:
        args:
          - server
          - /data
          - --console-address 
          - :9090
        volumeMounts:
        - mountPath: /data
          name: pvc-release-name-minio-vol
          subPath: ''
      serviceAccount: release-name-srv-account
      serviceAccountName: release-name-srv-account
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      creationTimestamp: null
      namespace: default
      name: pvc-release-name-minio-vol
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: "5Gi"
      storageClassName: longhorn
      volumeMode: Filesystem
---
# Source: plane-ce/templates/workloads/postgres.stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: default
  name: release-name-pgdb-wl
spec:
  selector:
    matchLabels:
      app.name: default-release-name-pgdb
  serviceName:  release-name-pgdb
  template:
    metadata:
      labels:
        app.name: default-release-name-pgdb
    spec:
      containers:
      - image: postgres:15.5-alpine
        imagePullPolicy: Always
        name: release-name-pgdb
        stdin: true
        tty: true
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: pvc-release-name-pgdb-vol
          subPath: ''
      serviceAccount: release-name-srv-account
      serviceAccountName: release-name-srv-account
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      creationTimestamp: null
      namespace: default
      name: pvc-release-name-pgdb-vol
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: "5Gi"
      storageClassName: longhorn
      volumeMode: Filesystem
---
# Source: plane-ce/templates/workloads/redis.stateful.yaml
# REDIS WORKLOAD

apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: default
  name: release-name-redis-wl
spec:
  selector:
    matchLabels:
      app.name: default-release-name-redis
  serviceName:  release-name-redis
  template:
    metadata:
      labels:
        app.name: default-release-name-redis
    spec:
      containers:
      - image: redis:7.2.4-alpine
        imagePullPolicy: Always
        name: release-name-redis
        stdin: true
        tty: true
        volumeMounts:
        - mountPath: /data
          name: pvc-release-name-redis-vol
          subPath: ''
      serviceAccount: release-name-srv-account
      serviceAccountName: release-name-srv-account
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      creationTimestamp: null
      namespace: default
      name: pvc-release-name-redis-vol
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: "1Gi"
      storageClassName: longhorn
      volumeMode: Filesystem
---
# Source: plane-ce/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: release-name-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: plane.example.com
      http:
        paths:
          - backend:
              service:
                port:
                  number: 3000
                name: release-name-web
            path: /
            pathType: Prefix
          - backend:
              service:
                port:
                  number: 8000
                name: release-name-api
            path: /api
            pathType: Prefix
          - backend:
              service:
                port:
                  number: 3000
                name: release-name-space
            path: /spaces
            pathType: Prefix
          - backend:
              service:
                port:
                  number: 9000
                name: release-name-minio
            path: /uploads
            pathType: Prefix
    - host: plane-minio.example.com
      http:
        paths:
          - backend:
              service:
                port:
                  number: 9090
                name: release-name-minio
            path: /
            pathType: Prefix
